# eval-framework

./: .sesskey  01_demo_api.ipynb  01_py_llm.py  01_test_groq_openai.py  01_test_llm.ipynb  02_api.ipynb  02_py_llm.py  03.2_router.ipynb  03_test_llm.ipynb  06_demo_prompt_google_crm.md  10_annotated_10_sample_csv.csv  10_annotations.db  10_fasthtml_annotation_app.py  10_sample_csv.csv  COMMANDS.md  README.md  _load.py  langgraph_data_agents_demo.py  optimizing_llm_as_a_judge_prompts.ipynb  pii_replacer.py  pyproject.toml  pytest.ini  red_team_results_gpt-3.5-turbo_1755853402.json  red_team_results_gpt-4o-mini_1755857996.json  requirements.txt  test_uv.py  uv_test.py
_archive/: 01_article_writer_should_write.csv  02_article_writer_translate.csv  04_article_writer_publishable.csv  therabot2.py
chroma_db/: chroma.sqlite3
rag_db/: chroma.sqlite3
results/: report_2025-08-05-14-37-05_4506172.csv  report_2025-08-05-14-41-08_5217066.csv  report_2025-08-05-14-41-28_1144148.csv  report_2025-08-05-14-42-00_7632435.csv  report_2025-08-05-14-42-23_1090186.csv  report_2025-08-05-15-59-38_1477536.csv  report_2025-08-05-16-03-26_3288365.csv  tracing.csv
src/: openai_agent_advanced_logging.py  openai_agent_logging.py  openai_red_team_final.py  pii_replacer.py
src/additional_ragas/: 01_generate_synthetic_qa_langchain_agents_data.json  01_ragas_multiturn_example.py  01_ragas_multiturn_style_evaluation.csv  02_create_sample_dataset.py  02_rag_test_dataset.csv  03.2_ragas_json_to_df.py  03.2_ragas_json_to_pandas.ipynb  03_ragas_summary.json  03_ragas_summary.md  04.1_docs_example.ipynb  05.1_chromadb_rag_eval.py  sample_data.py  (+2 more)
(+122 files in other folders)
